@@ -1,3 +1,8 @@
+2010-04-22  Werner Koch  <wk@g10code.com>
+
+	* assuan-listen.c (assuan_accept): Show the PID with the default
+	hello message.
+
 2010-04-19  Werner Koch  <wk@g10code.com>
 
 	* system-w32.c (is_socket): New.
